<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgetpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jfq.msms.login.ForgetpasswordActivity">

    <RelativeLayout
        android:id="@+id/forgetpassword_rl"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="@mipmap/title_bg">

        <ImageView
            android:layout_width="98px"
            android:layout_height="98px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:onClick="forgetpassword_back"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgetpassword"
            android:textColor="#ffffff"
            android:textSize="60px" />
    </RelativeLayout>

    <EditText
        android:id="@+id/forgetpassword_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetpassword_rl"
        android:layout_margin="@dimen/margin"
        android:background="#e3e3e3"
        android:hint="@string/phone"
        android:inputType="number"
        android:padding="20px"
        android:textSize="60px" />

    <LinearLayout
        android:id="@+id/forgetoassword_l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetpassword_et_phone"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#e3e3e3"
            android:padding="20px"
            android:text="@string/verifycode"
            android:textSize="60px" />

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:background="#e3e3e3"
            android:inputType="number"
            android:maxLength="6"
            android:padding="20px"
            android:singleLine="true"
            android:textSize="60px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:background="#e3e3e3"
            android:text="@string/getverifycode"
            android:textSize="60px" />
    </LinearLayout>

    <EditText
        android:id="@+id/forgetpassword_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetoassword_l1"
        android:layout_margin="@dimen/margin"
        android:background="#e3e3e3"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20px"
        android:textSize="60px" />

    <EditText
        android:id="@+id/forgetpassword_et_passwordtrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetpassword_et_password"
        android:layout_margin="@dimen/margin"
        android:background="#e3e3e3"
        android:hint="@string/passwordtrue"
        android:inputType="textPassword"
        android:padding="20px"
        android:textSize="60px" />

</RelativeLayout>
