<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jfq.msms.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="@mipmap/title_bg">

        <ImageView
            android:layout_width="98px"
            android:layout_height="98px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:src="@mipmap/icon_back"
            android:onClick="login_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="60px" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_rl"
        android:layout_margin="@dimen/margin"
        android:background="#e3e3e3"
        android:hint="@string/phone"
        android:padding="20px"
        android:textSize="60px" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_phone"
        android:layout_margin="@dimen/margin"
        android:background="#e3e3e3"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20px"
        android:textSize="60px" />

    <TextView
        android:id="@+id/login_tv_nopassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_et_password"
        android:layout_margin="@dimen/margin"
        android:gravity="right"
        android:text="@string/nopassword"
        android:textSize="40px"
        android:onClick="forgetpassword"/>

    <TextView
        android:id="@+id/login_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_nopassword"
        android:layout_margin="@dimen/margin"
        android:background="#ff0000"
        android:gravity="center"
        android:padding="20px"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="50px"
        android:onClick="login"/>

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_login"
        android:layout_margin="@dimen/margin"
        android:background="#00ff00"
        android:gravity="center"
        android:padding="20px"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="50px"
        android:onClick="register"/>


</RelativeLayout>
